--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,8 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
+$post-color:       #e35f22;
+$link-color:       #fcbc53;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
