--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@
 
 .site-title {
     font-size: 26px;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
@@ -20,7 +20,7 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: #ba4806;
     }
 }
 
@@ -33,7 +33,7 @@
     }
 
     .page-link {
-        color: $text-color;
+        color: #cf8d13;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the last one
@@ -192,6 +192,7 @@
 .post-link {
     display: block;
     font-size: 24px;
+    color: $post-color;
 }
 
 
