--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 10px solid $grey-color-dark;
+    border-bottom: 2px solid $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -17,6 +17,7 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    color: #ba4806;
 
     &,
     &:visited {
@@ -98,7 +99,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    border-top: 2px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
 
@@ -168,6 +169,7 @@
  * Page content
  */
 .page-content {
+    // width: 80%;
     padding: $spacing-unit 0;
 }
 
@@ -193,6 +195,11 @@
     display: block;
     font-size: 24px;
     color: $post-color;
+
+    &:visited {
+        color: lighten($post-color, 10%);
+    }
+
 }
 
 
