gradient and new text colors

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,10 +13,15 @@ dl, dd, ol, ul, figure {
 /**
  * Basic styling
  */
+
+html {
+    min-height: 100%;
+}
+
 body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
-    background-color: $background-color;
+    background: linear-gradient(to bottom right, white, $grey-color-dark);
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
@@ -95,7 +100,7 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($link-color, 15%);
+        color: darken($link-color, 10%);
     }
 
     &:hover {
