--- a/css/main.scss
+++ b/css/main.scss
@@ -14,11 +14,12 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #000;
 $background-color: #fdfdfd;
+$header-color:     #5a1778;
 $brand-color:      #2a7ae2;
-$post-color:       #e35f22;
-$link-color:       #fcbc53;
+$post-color:       #8A3f08;
+$link-color:       #ed9f3A;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
