--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,8 @@ $brand-color:      #2a7ae2;
 $post-color:       #8A3f08;
 $link-color:       #ed9f3A;
 
+$white:            #ffffff;
+$black:            #000000;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
