--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,8 @@ $link-color:       #ed9f3A;
 
 $white:            #ffffff;
 $black:            #000000;
+$green:            #006600;
+$purple:           #5a1778;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
